# PicoPiTinyUSBMidiHostBasic

./: README.md
midi_host_basic/: CMakeLists.txt
midi_host_basic/src/: main.c  tusb_config.h
